--- a/templates/base.html
+++ b/templates/base.html
@@ -55,11 +55,10 @@
   <meta property="og:image" content=""/>
   <meta property="og:description" content=""/>
   <meta property="og:url" content=""/>
-{#  <meta name="author" content="MITAPP"/>#}
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
   <meta name="theme-color" content="#ffffff"/>
-  <link rel="shortcut icon" href="{% static 'img/svg/icon.svg' %}"/>
+  <link rel="shortcut icon" href="{% static 'img/jpg/icon.png' %}"/>
   <link rel="stylesheet" href="{% static 'fonts/Montserrat/stylesheet.css' %}"/>
   <link rel="stylesheet" href="{% static 'libs/owl-carousel2/owl-carousel2.css' %}"/>
   <link rel="stylesheet" href="{% static 'libs/range-slider/ion.rangeSlider.min.css' %}"/>
@@ -124,18 +123,6 @@
             </div>
           </div>
           <div class="nav-top-right">
-            <div class="header-tel">
-              <div class="tel-but open-dropdown"><a>0 (555) 000 000</a></div>
-              <div id="phone-dropdown" class="tel-but__content content-dropdown">
-
-                    <a href="tel:0 (555) 781 556">0 (555) 000 000</a><br>
-
-                    <a href="tel:0 (700) 781 556">0 (700) 000 000</a><br>
-
-                    <a href="tel:0 (777) 781 556">0 (777) 000 000</a><br>
-
-              </div>
-            </div>
           <div class="social-link-all">
             <a class="whatsapp" href="#"></a>
             <a class="insta" href="#"></a>
@@ -261,9 +248,12 @@
 {#            </ul>#}
             <div class="social-link-all">
                 <ul>
-                <li><a class="whatsapp" href="https://www.instagram.com/salymfinancekg/">Whatsapp</a></li>
-                <li><a class="insta" href="https://www.instagram.com/salymfinancekg/">Instagram</a></li>
-                <li><a class="facebook" href="https://www.facebook.com/salymfinance/">Facebook</a></li>
+                <li><a class="whatsapp" href="#">Whatsapp</a></li>
+                <li><a class="insta" href="#">Instagram</a></li>
+                <li><a class="facebook" href="#">Facebook</a></li>
+{#                <li><a class="whatsapp" href="https://www.instagram.com/salymfinancekg/">Whatsapp</a></li>#}
+{#                <li><a class="insta" href="https://www.instagram.com/salymfinancekg/">Instagram</a></li>#}
+{#                <li><a class="facebook" href="https://www.facebook.com/salymfinance/">Facebook</a></li>#}
                 </ul>
             </div>
 {#          </div>#}
