--- a/templates/financing/financing_list.html
+++ b/templates/financing/financing_list.html
@@ -13,190 +13,20 @@
       </div>
       <div class="container">
         <section class="credit-content">
-          <h1> Кредиты</h1>
+          <h1>Финансирование</h1>
           <div class="card-all">
-              
+          {% for finance in financing %}
             <div class="card-credit-detail">
               <div class="credit-card__description">
-                <h3>Ипотека</h3>
-                <p class="dark">Ипотека от МФК &quot;Салым Финанс&quot; - недвижимость теперь доступней!</p>
-                <ul>
-	<li>Быстрое рассмотрение заявок;</li>
-	<li>Досрочное погашение без предупреждения и без комиссий.</li>
-</ul>
+                <h3>{{ finance.title }}</h3>
+                <p class="dark">{{ finance.paragraph }}</p>
               </div>
-              <div class="credit-card-but"><a href="/financing_list/financing_detail">Подробнее</a></div>
+              <div class="credit-card-but"><a href="{% url 'financing_list:financing_detail' id=finance.id %}">Подробнее</a></div>
               <div class="credit-card-img">
-                  
-                  <img src="/media/credit/последнии_ипотека.png.250x400_q85_box-128,0,1388,2014_crop_detail.png" alt="load img"/>
-                  
+                  <img src="{{finance.image.url}}" style="background: #F2F3F7" alt="load img"/>
               </div>
             </div>
-            
-            <div class="card-credit-detail">
-              <div class="credit-card__description">
-                <h3>Кредит за час</h3>
-                <p class="dark">Без залога, без поручительства! 
-Для тех, кто ценит свое время!</p>
-                <ul>
-	<li>Кредиты на любые цели;</li>
-	<li>Срок рассмотрения от 1 часа;</li>
-	<li>Сумма - до 200 тыс. сом.</li>
-</ul>
-              </div>
-              <div class="credit-card-but"><a href="/ru/credit/credit-za-chas">Подробнее</a></div>
-              <div class="credit-card-img">
-                  
-                  <img src="/media/credit/кредит_за_час_NQ0w6iM.png.250x400_q85_box-1342713782014_crop_detail_WDLhBnS.png.250x400_q85_box-1,0,250,399_crop_detail.png" alt="load img"/>
-                  
-              </div>
-            </div>
-            
-            <div class="card-credit-detail">
-              <div class="credit-card__description">
-                <h3>Кредит на образование</h3>
-                <p class="dark">Начните уже сегодня приобретать новые знания и навыки вместе с кредитом на образование от МФК &quot;Салым Финанс&quot;!</p>
-                <ul>
-	<li>Сниженные процентные ставки;</li>
-	<li>До 1.5 млн.&nbsp;сом;</li>
-	<li>Досрочное погашение без предупреждений и комиссий!</li>
-</ul>
-              </div>
-              <div class="credit-card-but"><a href="/ru/credit/credit-na-obrazovanie">Подробнее</a></div>
-              <div class="credit-card-img">
-                  
-                  <img src="/media/credit/шапка_y6XT3Hh.png.250x400_q85_box-108,0,1368,2014_crop_detail.png" alt="load img"/>
-                  
-              </div>
-            </div>
-            
-            <div class="card-credit-detail">
-              <div class="credit-card__description">
-                <h3>Кредит &quot;Тепло и Комфорт&quot;</h3>
-                <p class="dark">Желаете утеплить свое жилье? Перейти на энергосберегающие виды отопления или пристроить благоустроенный санузел в дом? Заменить окна и двери? С кредитом &quot;Тепло и комфорт&quot; от МФК &quot;Салым Финанс&quot; ваши планы осуществятся!</p>
-                <ul>
-	<li>Быстрое рассмотрение заявок;</li>
-	<li>До 500 тыс. сом без залога;</li>
-	<li>Возможность поэтапного финансирования.</li>
-</ul>
-              </div>
-              <div class="credit-card-but"><a href="/ru/credit/teplo-i-comfort">Подробнее</a></div>
-              <div class="credit-card-img">
-                  
-                  <img src="/media/credit/ипотека_последнии_XVYDQoC.png.250x400_q85_box-0,0,375,600_crop_detail.png" alt="load img"/>
-                  
-              </div>
-            </div>
-            
-            <div class="card-credit-detail">
-              <div class="credit-card__description">
-                <h3>Потребительский кредит</h3>
-                <p class="dark">Не откладывайте мечту на завтра! С потребительским кредитом от МФК &quot;Салым Финанс&quot; вы можете осуществлять необходимые покупки быстрее!</p>
-                <ul>
-	<li>Быстрые сроки рассмотрения;</li>
-	<li>Сумма - до 500 тыс.&nbsp;сом без залога;</li>
-	<li>Досрочное погашение без предупреждения и без комиссий.</li>
-</ul>
-              </div>
-              <div class="credit-card-but"><a href="/ru/credit/potrebitelskij-kredit">Подробнее</a></div>
-              <div class="credit-card-img">
-                  
-                  <img src="/media/credit/потреб_последний_MXs3WG4.png.250x400_q85_box-229027424017_crop_detail.png.250x400_q85_box-0,0,249,400_crop_detail.png" alt="load img"/>
-                  
-              </div>
-            </div>
-            
-            <div class="card-credit-detail">
-              <div class="credit-card__description">
-                <h3>Агрокредит</h3>
-                <p class="dark">С каникулами по платежам!</p>
-                <ul>
-	<li>Быстрое рассмотрение заявок;</li>
-	<li>Сумма от 10 тыс. до 14 млн. сом;</li>
-	<li>Индивидуальный график погашения, с каникулами по выплатам.</li>
-</ul>
-              </div>
-              <div class="credit-card-but"><a href="/ru/credit/agrocredit">Подробнее</a></div>
-              <div class="credit-card-img">
-                  
-                  <img src="/media/credit/агро_YTh4Yl1_1QylURa.png.250x400_q85_box-430,0,5471,8056_crop_detail.png" alt="load img"/>
-                  
-              </div>
-            </div>
-            
-            <div class="card-credit-detail">
-              <div class="credit-card__description">
-                <h3>Кредит &quot;Строительство и ремонт&quot;</h3>
-                <p class="dark">Поэтапное финансирование строительства и ремонта жилья!</p>
-                <ul>
-	<li>Быстрое рассмотрение заявок;</li>
-	<li>Сумма - до 14 млн. сом;</li>
-	<li>Возможность поэтапного финансирования.</li>
-</ul>
-              </div>
-              <div class="credit-card-but"><a href="/ru/credit/stroitelstvo-i-remont">Подробнее</a></div>
-              <div class="credit-card-img">
-                  
-                  <img src="/media/credit/строй_последний_35dbjcA.png.250x400_q85_box-2,0,376,598_crop_detail.png" alt="load img"/>
-                  
-              </div>
-            </div>
-            
-            <div class="card-credit-detail">
-              <div class="credit-card__description">
-                <h3>На развитие бизнеса</h3>
-                <p class="dark">Кредиты на действующий и стартовый бизнес!</p>
-                &nbsp;
-<ul>
-	<li>Быстрое рассмотрение;</li>
-	<li>Сумма до 14 млн.&nbsp;сом;</li>
-	<li>Досрочное погашение кредита без предупреждения и комиссий!</li>
-</ul>
-              </div>
-              <div class="credit-card-but"><a href="/ru/credit/business-credit">Подробнее</a></div>
-              <div class="credit-card-img">
-                  
-                  <img src="/media/credit/бизнес_последнии_vHzgyn9.png.250x400_q85_box-108,0,1368,2014_crop_detail.png" alt="load img"/>
-                  
-              </div>
-            </div>
-            
-            <div class="card-credit-detail">
-              <div class="credit-card__description">
-                <h3>Бизнес-Ипотека</h3>
-                <p class="dark">Приобретайте помещения и земли для бизнеса в короткие сроки!</p>
-                <ul>
-	<li>Быстрое рассмотрение;</li>
-	<li>Досрочное погашение кредита без предупреждения и комиссий;</li>
-	<li>Сниженные проценты.</li>
-</ul>
-              </div>
-              <div class="credit-card-but"><a href="/ru/credit/Business-Mortgage">Подробнее</a></div>
-              <div class="credit-card-img">
-                  
-                  <img src="/media/credit/commercial_mortgage_ggMqCIZ.png.250x400_q85_box-457,0,5498,8056_crop_detail.png" alt="load img"/>
-                  
-              </div>
-            </div>
-            
-            <div class="card-credit-detail">
-              <div class="credit-card__description">
-                <h3>Кредит на рефинансирование</h3>
-                <p class="dark">Уменьшите размер ежемесячных платежей или получите дополнительные деньги на необходимые нужды!</p>
-                <ul>
-	<li>Рефинансирование параллельных кредитов и долгов;</li>
-	<li>Объединение нескольких кредитов в один;</li>
-	<li>Возможность получить дополнительные денежные средства.</li>
-</ul>
-              </div>
-              <div class="credit-card-but"><a href="/ru/credit/credit-na-refinansirovanie">Подробнее</a></div>
-              <div class="credit-card-img">
-                  
-                  <img src="/media/credit/у4куеу.png.250x400_q85_box-430,0,5471,8056_crop_detail.png" alt="load img"/>
-                  
-              </div>
-            </div>
-            
+          {% endfor %}
           </div>
         </section>
       </div>
